# artos

./: .gitignore  AUTHORS.md  BUGS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FAQ.md  INSTALL.md  MANIFEST.md  NEWS.md  README.md  THANKS.md  TODO.md  build.bat  docker-apt-sources.list  docker-include-sources.sh  docker-install-deps.sh  docker-run-meson.sh  meson.build  meson.sh  run.bat
.github/: README  README.md
.github/workflows/: build-release-master.yml  on-push-to-master.yml
boards/rasp/: README.md
boards/virt/: README.md  config.ini
boot/: boot.h  boot_priv.h  exit.c  init.c  main.c  memmap.c  splash.c
boot/cfg/: config.h
boot/inc/: interface.h  internal.h
boot/src/: exit.c  init.c  main.c  memmap.c  splash.c
emulator/: binaries.S  main.c  meson.build
emulator/cfg/: config.h
emulator/inc/: interface.h  internal.h
emulator/src/: main.c
kernel/: cpu.h  debug.c  kernel.c  os.h  os_priv.h  power.c  serial.c  types.h
kernel/cfg/: config.h
kernel/inc/: interface.h  internal.h
kernel/src/: core.c  debug.c  memory.c  port.c  power.c  print.c  process.c  serial.c  thread.c
machines/virt/: emulator.ini  system.ini
port/cfg/: config.h
port/inc/: interface.h  internal.h
port/src/: serial.c  thread.c  translation.c
scripts/: docker-build-artos.sh  docker-install-deps.sh  docker-run-meson.sh
system/: meson.build
system/boot/: main.c
